Merged CMIS063 to HEAD   16930: MOB-1330: Upgrade Web Services Repository to 0.7
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/alfresco/HEAD/root@17243 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261